gettext-macros/tests/ui/dgettext/expected_comma_and_mismatched_number_of_args.stderr
error: expected `,`
 --> tests/ui/dgettext/expected_comma_and_mismatched_number_of_args.rs:4:34
  |
4 |     dgettext!("domainname", "{}" 1, 2);
  |                                  ^

error: 1 positional argument in format string, but there are 2 arguments
 --> tests/ui/dgettext/expected_comma_and_mismatched_number_of_args.rs:4:29
  |
4 |     dgettext!("domainname", "{}" 1, 2);
  |                             ^^^^
