gettext-macros/tests/ui/dgettext/expected_comma_and_mismatched_number_of_args.rs
use gettext_macros::*;

fn main() {
    dgettext!("domainname", "{}" 1, 2);
}
